fix: position events correctly, displaying them evenly without spacing

--- a/src/features/Planner/ClickableHoursOfTheDay/clickable-hours-of-the-day.module.scss
+++ b/src/features/Planner/ClickableHoursOfTheDay/clickable-hours-of-the-day.module.scss
@@ -8,12 +8,13 @@
   button {
     background-color: transparent;
     border-top: 0.5px solid variables.$black-color;
+    box-sizing: border-box;
     border-bottom: 0.5px solid variables.$black-color;
     border-radius: 0;
     color: variables.$black-color;
-    min-height: 50px;
+    min-height: 50px; // same as <ClickableHoursOfTheDay/> buttonHeight
+    height: 50px; // same as <ClickableHoursOfTheDay/> buttonHeight
     transform: translateZ(0);
-    // height: 50px;
     &:first-of-type {
       border-top: 1px solid variables.$black-color;
     }
